--- a/business.html
+++ b/business.html
@@ -80,6 +80,10 @@
 
       <div class="text-end mt-4">
         <button type="submit" class="btn btn-warning">Submit Application</button>
+        <div class="text-center my-4">
+  <a href="index.html" class="btn btn-primary btn-lg">Home</a>
+</div>
+
         
 
         
