--- a/current.html
+++ b/current.html
@@ -76,6 +76,10 @@
 
     <div class="mt-4 text-center">
       <button type="submit" class="btn btn-success">Submit Application</button>
+      <div class="text-center my-4">
+  <a href="index.html" class="btn btn-primary btn-lg">Home</a>
+</div>
+
     </div>
   </form>
 </div>
