--- a/education.html
+++ b/education.html
@@ -79,7 +79,13 @@
       <div class="text-end mt-4">
         <button type="submit" class="btn btn-info">Submit Application</button>
 
- <
+        <div class="text-center my-4">
+  <a href="index.html" class="btn btn-primary btn-lg">Home</a>
+</div>
+
+
+
+ 
       </div>
     </form>
   </div>
