--- a/home.html
+++ b/home.html
@@ -132,6 +132,11 @@
       <div class="text-end mt-4">
         <button type="submit" class="btn btn-success">Submit Application</button>
 
+        <div class="text-center my-4">
+  <a href="index.html" class="btn btn-primary btn-lg">Home</a>
+</div>
+
+
   
       </div>
     </form>
